--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,193 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  max-width: 1200px;
+}
+
+.header {
+  background: #06c;
+  color: #fff;
+  padding: 30px;
+  text-align: center;
+  width: 100%;
+}
+
+.w-100p {
+  border: 1px solid #ccc;
+  width: 100%;
+}
+
+.w-100p thead {
+  text-align: left;
+}
+
+.w-100p td {
+  border-bottom: 1px solid #eee;
+}
+
+.products-col {
+  border: 1px solid #ccc;
+  padding: 15px;
+}
+
+.shopcart-col {
+  border: 1px solid #ccc;
+  padding: 15px;
+}
+
+.product {
+  position: relative;
+  border: 1px solid #ccc;
+  margin-bottom: 30px;
+  min-height: 300px;
+  padding: 15px;
+  text-align: center;
+}
+
+.product img {
+  cursor: pointer;
+  float: left;
+  margin-right: 10px;
+  max-width: 80px;
+}
+
+.product .description {
+  font-size: 14px;
+  margin: 30px 0 0 20px;
+  text-align: left;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 15px;
+  height: 80px;
+  width: 100%;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.add-to-cart {
+  background: #06c;
+  color: #fff;
+  font-size: 13px;
+  padding: 5px 10px;
+  width: 100%;
+}
+
+.remove-from-cart {
+  background: #c33;
+  color: #fff;
+  font-size: 13px;
+  padding: 5px 10px;
+  width: 100%;
+}
+
+.edit-product, .add-product {
+  background: #06c;
+  color: #fff;
+  font-size: 13px;
+  padding: 5px 15px;
+}
+
+.delete-product {
+  background: #c33;
+  color: #fff;
+  font-size: 13px;
+  padding: 5px 15px;
+}
+
+.top-menu {
+  background: #444;
+  height: 4rem;
+  margin-bottom: 30px;
+  width: 100%;
+}
+
+.top-menu nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.top-menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-menu li {
+  margin: 0 1rem;
+}
+
+.top-menu a {
+  display: block;
+  border-radius: 5px;
+  color: white;
+  font-size: 18px;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+}
+
+.top-menu a:hover, .top-menu a:active {
+  background: white;
+  color: #06c;
+}
+
+.cart {
+  font-size: 14px;
+}
+
+.cart .photo {
+  margin-right: 10px;
+  max-width: 64px;
+}
+
+.cart .name {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.cart ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cart li {
+  padding: 1rem;
+  margin: 1rem 0;
+  border: 1px solid #ccc;
+}
+
+.cart-total {
+  background: #06c;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px 15px;
+  text-align: center;
+}
+
+.search-bar {
+  margin: 50px 0 30px;
+}
+
+.search-bar input[type="text"] {
+  padding: 5px 10px;
+  width: 100%;
 }
