--- a/src/App.css
+++ b/src/App.css
@@ -6,117 +6,6 @@
   color: #61dafb;
 }
 
-.container {
-  max-width: 1200px;
-}
-
-.header {
-  background: #8a1538;
-  color: #fff;
-  padding: 30px;
-  text-align: center;
-  width: 100%;
-}
-
-.w-100p {
-  border: 1px solid #ccc;
-  width: 100%;
-}
-
-.w-100p thead {
-  text-align: left;
-}
-
-.w-100p td {
-  border-bottom: 1px solid #eee;
-}
-
-.products-col {
-  border: 1px solid #ccc;
-  padding: 15px;
-}
-
-.shopcart-col {
-  border: 1px solid #ccc;
-  padding: 15px;
-}
-
-.product {
-  position: relative;
-  border: 1px solid #ccc;
-  margin-bottom: 30px;
-  min-height: 350px;
-  padding: 15px;
-  text-align: center;
-}
-
-.product img {
-  cursor: pointer;
-  margin-right: 10px;
-  max-height: 100px;
-}
-
-.product .content {
-  font-size: 14px;
-  height: 65px;
-  margin: 30px 0 0 20px;
-  overflow: hidden;
-  text-align: left;
-}
-
-.product .price {
-  font-weight: bold;
-}
-
-.bottom {
-  position: absolute;
-  bottom: 15px;
-  height: 80px;
-  width: 100%;
-}
-
-.align-center {
-  text-align: center;
-}
-
-.align-right {
-  text-align: right;
-}
-
-.add-to-cart {
-  background: #8a1538;
-  color: #fff;
-  font-size: 13px;
-  padding: 5px 10px;
-  width: 100%;
-}
-
-.btn:hover {
-  color: #ffff00;
-}
-
-.remove-from-cart {
-  background: #8a1538;
-  color: #fff;
-  font-size: 13px;
-  padding: 5px 10px;
-  width: 100%;
-}
-
-.edit-product, .add-product {
-  background: #8a1538;
-  color: #fff;
-  font-size: 13px;
-  padding: 5px 15px;
-}
-
-.delete-product {
-  background: #c33;
-  color: #fff;
-  font-size: 13px;
-  padding: 5px 15px;
-}
-
 .top-menu {
   background: #555;
   height: 4rem;
@@ -159,57 +48,63 @@
   color: #8a1538;
 }
 
-.cart {
-  font-size: 14px;
+.container {
+  max-width: 1200px;
 }
 
-.cart .photo {
-  margin-right: 10px;
-  max-width: 64px;
-}
-
-.cart .name {
-  font-size: 15px;
-  font-weight: bold;
-}
-
-.cart ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.cart li {
-  padding: 1rem;
-  margin: 1rem 0;
-  border: 1px solid #ccc;
-}
-
-.cart-total {
+.header {
   background: #8a1538;
   color: #fff;
-  font-weight: bold;
-  padding: 10px 15px;
+  padding: 30px;
   text-align: center;
-}
-
-.search-bar {
-  margin: 50px 0 30px;
-}
-
-.search-bar input[type="text"] {
-  padding: 5px 10px;
   width: 100%;
 }
 
-.modal-content {
-  left: 50%;
-  margin-left: -25vw;
-  width: 50vw;
+h2 {
+  margin-top: 30px;
 }
 
-.modal-body .photo {
-  max-width: 100%;
+a, a:hover {
+  color: #8a1538;
+}
+
+.w-100p {
+  border: 1px solid #ccc;
+  width: 100%;
+}
+
+.w-100p thead {
+  text-align: left;
+}
+
+.w-100p td {
+  border-bottom: 1px solid #eee;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 15px;
+  height: 80px;
+  width: 100%;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.submit-answer {
+  background: #8a1538;
+  color: #fff;
+  font-size: 13px;
+  padding: 7px 15px;
+}
+
+.btn:hover {
+  color: #ffff00;
 }
 
 .full-width {
@@ -224,6 +119,47 @@
   margin-bottom: 15px;
 }
 
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
 .error {
   color: #f00;
+}
+
+.quizzes {
+  list-style-type: none;
+  margin: 30px 0 0;
+  padding: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.quizzes li {
+  float: none;
+  display: block;
+  margin: 0 0 20px;
+}
+
+.question {
+    margin-bottom: 20px;
+}
+
+.choices {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.choices li input[type="radio"] {
+  margin-right: 15px;
+}
+
+.email {
+  padding: 8px 15px;
+  width: 300px;
 }
